--- a/pc/planning/src/apps/CMakeLists.txt
+++ b/pc/planning/src/apps/CMakeLists.txt
@@ -21,7 +21,7 @@ else()
 endif()
 
 add_executable(planar_search planar_search.cpp)
-target_link_libraries(planar_search map vis ${OpenCV_LIBS})
+target_link_libraries(planar_search geometry map vis ${OpenCV_LIBS})
 
 add_executable(map_gen map_gen.cpp)
 target_link_libraries(map_gen map vis ${OpenCV_LIBS})
@@ -35,3 +35,5 @@ target_link_libraries(local_analysis map vis nav_field ${OpenCV_LIBS})
 add_executable(octomap_server_node octomap_server_node.cpp)
 target_link_libraries(octomap_server_node local3d map geometry ${Octomap_LIBS} ${LCM_LIBRARIES})
 
+add_executable(shortcut_analysis shortcut_analysis.cpp)
+target_link_libraries(shortcut_analysis map vis nav_field ${OpenCV_LIBS})
