--- a/pc/gtests/CMakeLists.txt
+++ b/pc/gtests/CMakeLists.txt
@@ -17,6 +17,9 @@ include_directories(${CMAKE_CURRENT_SOURCE_DIR})
 # Add executables
 set(TESTCASES_SRC
     frame_unittest.cpp
+    graph_unittest.cpp
+    typesize_unittest.cpp
+    maputils_unittest.cpp
 )
 add_executable(utils_gtest_all start_tests.cpp ${TESTCASES_SRC})
 target_link_libraries(utils_gtest_all gtest utils)
