--- a/pc/planning/src/apps/CMakeLists.txt
+++ b/pc/planning/src/apps/CMakeLists.txt
@@ -14,10 +14,10 @@ else()
   add_executable(quadsim_pr_planner quadsim_planner.cpp)
     if (ENABLE_LOGGING)
       add_definitions(-DENABLE_G3LOG)
-      target_link_libraries(quadsim_pr_planner map path_repair ctrl_utils g3logger ${OpenCV_LIBS} ${LCM_LIBRARIES}) 
+      target_link_libraries(quadsim_pr_planner map path_repair ctrl_utils g3logger ${OpenCV_LIBS} ${LCM_LIBRARIES})
     else(ENABLE_LOGGING)
       target_link_libraries(quadsim_pr_planner map path_repair ${OpenCV_LIBS} ${LCM_LIBRARIES})
-    endif (ENABLE_LOGGING)  
+    endif (ENABLE_LOGGING)
 endif()
 
 add_executable(planar_search planar_search.cpp)
@@ -27,7 +27,7 @@ add_executable(map_gen map_gen.cpp)
 target_link_libraries(map_gen map vis ${OpenCV_LIBS})
 
 add_executable(map_param map_param.cpp)
-target_link_libraries(map_param geometry vis ${OpenCV_LIBS} ${LCM_LIBRARIES})
+target_link_libraries(map_param geometry vis ${OpenCV_LIBS})
 
 add_executable(local_analysis local_analysis.cpp)
 target_link_libraries(local_analysis map vis nav_field ${OpenCV_LIBS})
