--- a/pc/planning/src/path_repair/CMakeLists.txt
+++ b/pc/planning/src/path_repair/CMakeLists.txt
@@ -31,19 +31,19 @@ endif (ENABLE_LOGGING)
 #add_executable(graph_combine_exp tests/graph_combine_exp.cpp)
 #target_link_libraries(graph_combine_exp map local3d utils ${Octomap_LIBS} ${LCM_LIBRARIES})
 
-add_executable(test_combiner tests/test_combiner.cpp)
-add_definitions(-DENABLE_G3LOG)
-target_link_libraries(test_combiner map geometry local3d polyopt quadflat utils g3logger path_repair ${Octomap_LIBS} ${LCM_LIBRARIES})
+#add_executable(test_combiner tests/test_combiner.cpp)
+#add_definitions(-DENABLE_G3LOG)
+#target_link_libraries(test_combiner map geometry local3d polyopt quadflat utils g3logger path_repair ${Octomap_LIBS} ${LCM_LIBRARIES})
 
-add_executable(test_combinerv2 tests/test_combiner_v2.cpp)
-add_definitions(-DENABLE_G3LOG)
-target_link_libraries(test_combinerv2 map geometry local3d polyopt quadflat utils g3logger path_repair ${Octomap_LIBS} ${LCM_LIBRARIES})
+#add_executable(test_combinerv2 tests/test_combiner_v2.cpp)
+#add_definitions(-DENABLE_G3LOG)
+#target_link_libraries(test_combinerv2 map geometry local3d polyopt quadflat utils g3logger path_repair ${Octomap_LIBS} ${LCM_LIBRARIES})
 
-add_executable(test_tracking tests/test_tracking.cpp)
-target_link_libraries(test_tracking polyopt quadflat utils ${LCM_LIBRARIES})
+#add_executable(test_tracking tests/test_tracking.cpp)
+#target_link_libraries(test_tracking polyopt quadflat utils ${LCM_LIBRARIES})
 
 add_executable(test_cubearray tests/test_cubearray.cpp)
 target_link_libraries(test_cubearray geometry)
 
-add_executable(test_cubearray_builder tests/test_cubearray_builder.cpp)
-target_link_libraries(test_cubearray_builder geometry  ${LCM_LIBRARIES})
+#add_executable(test_cubearray_builder tests/test_cubearray_builder.cpp)
+#target_link_libraries(test_cubearray_builder geometry  ${LCM_LIBRARIES})
