--- a/pc/planning/src/quad_flat/CMakeLists.txt
+++ b/pc/planning/src/quad_flat/CMakeLists.txt
@@ -10,7 +10,7 @@ else()
 endif()
 
 # Add libraries
-set(QUADFLAT_LIB_SRC 
+set(QUADFLAT_LIB_SRC
     quad_flattraj.cpp
     quad_polyopt.cpp
 )
@@ -18,14 +18,14 @@ add_library(quadflat STATIC ${QUADFLAT_LIB_SRC})
 target_link_libraries(quadflat polyopt ${GUROBI_LIBRARIES})
 
 # Add executables
-add_executable(test_quadopt tests/test_quadopt.cpp)
-target_link_libraries(test_quadopt polyopt quadflat ${GUROBI_LIBRARIES} ${LCM_LIBRARIES})
+#add_executable(test_quadopt tests/test_quadopt.cpp)
+#target_link_libraries(test_quadopt polyopt quadflat ${GUROBI_LIBRARIES} ${LCM_LIBRARIES})
 
-add_executable(test_jointopt tests/test_jointopt.cpp)
-target_link_libraries(test_jointopt polyopt quadflat ${GUROBI_LIBRARIES} ${LCM_LIBRARIES})
+#add_executable(test_jointopt tests/test_jointopt.cpp)
+#target_link_libraries(test_jointopt polyopt quadflat ${GUROBI_LIBRARIES} ${LCM_LIBRARIES})
 
-add_executable(test_jointcorridor tests/test_jointcorridor.cpp)
-target_link_libraries(test_jointcorridor polyopt quadflat ${GUROBI_LIBRARIES} ${LCM_LIBRARIES})
+#add_executable(test_jointcorridor tests/test_jointcorridor.cpp)
+#target_link_libraries(test_jointcorridor polyopt quadflat ${GUROBI_LIBRARIES} ${LCM_LIBRARIES})
 
 add_executable(test_trajdef tests/test_trajdef.cpp)
 target_link_libraries(test_trajdef polyopt quadflat ${GUROBI_LIBRARIES})
