lcm config needs to be updated

--- a/pc/control/src/apps/CMakeLists.txt
+++ b/pc/control/src/apps/CMakeLists.txt
@@ -3,6 +3,9 @@ include_directories(${CMAKE_CURRENT_SOURCE_DIR})
 include_directories(${PROJECT_SOURCE_DIR}/src/vrep_sim/vrep_lib/include)
 include_directories(${PROJECT_SOURCE_DIR}/src/vrep_sim/vrep_lib/remoteApi)
 
+find_package(PkgConfig REQUIRED)
+pkg_search_module(LCM REQUIRED lcm)
+
 # Apps based on AscTec Hummingbird
 add_executable(quadsim_hbird_demo quadsim_hbird_demo.cpp)
 target_link_libraries(quadsim_hbird_demo quadsim quad_ctrl)
@@ -19,4 +22,3 @@ target_link_libraries(quadsim_hbird_pos_step quadsim quad_ctrl)
 # Apps based on 3DR Solo
 add_executable(quadsim_solo_demo quadsim_solo_demo.cpp)
 target_link_libraries(quadsim_solo_demo quadsolosim quad_ctrl)
-
