--- a/pc/control/CMakeLists.txt
+++ b/pc/control/CMakeLists.txt
@@ -26,6 +26,7 @@ include_directories(${CMAKE_CURRENT_SOURCE_DIR}/src)
 ## Find LCM
 find_package(PkgConfig REQUIRED)
 pkg_search_module(LCM REQUIRED lcm)
+find_package(lcm REQUIRED)
 
 if(LCM_NOT_FOUND)
   message(STATUS "LCM is not found. Inter-process communication depends on LCM.")
