--- a/pc/planning/CMakeLists.txt
+++ b/pc/planning/CMakeLists.txt
@@ -31,9 +31,11 @@ include_directories(${CMAKE_SOURCE_DIR}/third_party/octomap-1.8.0/octomap/includ
 set(Octomap_LIBS octomap octomath)
 
 ## Find LCM
-find_package(PkgConfig REQUIRED)
-pkg_search_module(LCM REQUIRED lcm)
-find_package(lcm REQUIRED)
+#find_package(PkgConfig REQUIRED)
+#pkg_search_module(LCM REQUIRED lcm)
+#find_package(lcm REQUIRED)
+
+find_package(LCM REQUIRED)
 
 if(LCM_NOT_FOUND)
   message(STATUS "LCM is not found. Inter-process communication depends on LCM.")
