control and planning modules are independent now, duplicated defs in common need to be resolved

--- a/pc/planning/src/polyopt/CMakeLists.txt
+++ b/pc/planning/src/polyopt/CMakeLists.txt
@@ -12,7 +12,7 @@ endif()
 # Add libraries
 set(POLYOPT_LIB_SRC
     polyopt_math.cpp
-    poly_curve.cpp
+    #poly_curve.cpp
     gurobi_utils.cpp
     gurobi_polyopt.cpp
 )
