--- a/pc/CMakeLists.txt
+++ b/pc/CMakeLists.txt
@@ -30,7 +30,7 @@ include_directories(${CMAKE_SOURCE_DIR})
 include_directories(${CMAKE_SOURCE_DIR}/third_party/)
 
 ## Add other sub source directories
-add_subdirectory(utils)
+#add_subdirectory(utils)
 add_subdirectory(common)
 add_subdirectory(control)
 add_subdirectory(planning)
