partially replaced g3log by spdlog

--- a/pc/CMakeLists.txt
+++ b/pc/CMakeLists.txt
@@ -14,15 +14,14 @@ include(cmake/lcmtypes.cmake)
 lcmtypes_build()
 
 ## Optionally built modules: on/off
-set(ENABLE_LOGGING off)
+set(ENABLE_LOGGING on)
 set(BUILD_TESTS off)
 
 if(ENABLE_LOGGING)
-	message( "-- Enable logging with g3log -- Yes" )
+	message( "-- Enable logging with spdlog -- Yes" )
 	message( "-- Deafult log directory: srcl_ctrl/control/log " )
-	include_directories(${CMAKE_SOURCE_DIR}/third_party/g3log/src)
 else(ENABLE_LOGGING)
-	message( "-- Enable logging with g3log -- No" )
+	message( "-- Enable logging with spdlog -- No" )
 endif(ENABLE_LOGGING)
 
 ## Config common include directories
@@ -33,7 +32,7 @@ include_directories(${CMAKE_SOURCE_DIR}/third_party/)
 #add_subdirectory(utils)
 add_subdirectory(common)
 add_subdirectory(control)
-add_subdirectory(planning)
+#add_subdirectory(planning)
 add_subdirectory(third_party)
 
 ## Add test source directories
