fixed transformation issue

--- a/pc/planning/CMakeLists.txt
+++ b/pc/planning/CMakeLists.txt
@@ -63,7 +63,7 @@ add_subdirectory(src/path_repair)
 add_subdirectory(src/geometry)
 #add_subdirectory(src/graph)
 add_subdirectory(src/map)
-add_subdirectory(src/octomap)
+add_subdirectory(src/map3d)
 add_subdirectory(src/vis)
 #add_subdirectory(src/rrtstar)
 #add_subdirectory(src/planner)
