--- a/pc/planning/src/map3d/CMakeLists.txt
+++ b/pc/planning/src/map3d/CMakeLists.txt
@@ -9,11 +9,12 @@ find_package(PkgConfig REQUIRED)
 pkg_search_module(LCM REQUIRED lcm)
 
 # Add libraries
-set(LOCAL3DMAP_LIB_SRC
+set(MAP3D_LIB_SRC
     octomap_server.cpp
+    transformation.cpp
 )
-add_library(local3d STATIC ${LOCAL3DMAP_LIB_SRC})
-target_link_libraries(local3d map geometry ${Octomap_LIBS} ${LCM_LIBRARIES})
+add_library(map3d STATIC ${MAP3D_LIB_SRC})
+target_link_libraries(map3d map geometry ${Octomap_LIBS} ${LCM_LIBRARIES})
 
 # Add executables
 add_executable(octree_example tests/octomap_example.cpp)
