cleaned up mission module

--- a/pc/planning/src/map3d/CMakeLists.txt
+++ b/pc/planning/src/map3d/CMakeLists.txt
@@ -21,7 +21,7 @@ add_executable(octree_example tests/octomap_example.cpp)
 target_link_libraries(octree_example ${Octomap_LIBS})
 
 #add_executable(test_octomap tests/test_octomap.cpp)
-#target_link_libraries(test_octomap local3d ${Octomap_LIBS})
+#target_link_libraries(test_octomap map3d ${Octomap_LIBS})
 
 #add_executable(test_cubebuilder tests/test_cubebuilder.cpp)
-#target_link_libraries(test_cubebuilder map geometry local3d ${Octomap_LIBS} ${LCM_LIBRARIES})
+#target_link_libraries(test_cubebuilder map geometry map3d ${Octomap_LIBS} ${LCM_LIBRARIES})
