--- a/pc/planning/src/path_repair/CMakeLists.txt
+++ b/pc/planning/src/path_repair/CMakeLists.txt
@@ -16,13 +16,13 @@ target_link_libraries(path_repair map nav_field map3d polyopt quadflat common mi
 
 # Add executables
 #add_executable(graph_combine_exp tests/graph_combine_exp.cpp)
-#target_link_libraries(graph_combine_exp map local3d utils ${Octomap_LIBS} ${LCM_LIBRARIES})
+#target_link_libraries(graph_combine_exp map map3d utils ${Octomap_LIBS} ${LCM_LIBRARIES})
 
 #add_executable(test_combiner tests/test_combiner.cpp)
-#target_link_libraries(test_combiner map geometry local3d polyopt quadflat g3logger path_repair ${Octomap_LIBS} ${LCM_LIBRARIES})
+#target_link_libraries(test_combiner map geometry map3d polyopt quadflat g3logger path_repair ${Octomap_LIBS} ${LCM_LIBRARIES})
 
 #add_executable(test_combinerv2 tests/test_combiner_v2.cpp)
-#target_link_libraries(test_combinerv2 map geometry local3d polyopt quadflat g3logger path_repair ${Octomap_LIBS} ${LCM_LIBRARIES})
+#target_link_libraries(test_combinerv2 map geometry map3d polyopt quadflat g3logger path_repair ${Octomap_LIBS} ${LCM_LIBRARIES})
 
 #add_executable(test_tracking tests/test_tracking.cpp)
 #target_link_libraries(test_tracking polyopt quadflat ${LCM_LIBRARIES})
