updated lcm cmake config

--- a/pc/control/CMakeLists.txt
+++ b/pc/control/CMakeLists.txt
@@ -24,14 +24,13 @@ set(ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/src)
 
 ## Find LCM
-find_package(PkgConfig REQUIRED)
-pkg_search_module(LCM REQUIRED lcm)
-find_package(lcm REQUIRED)
+#find_package(PkgConfig REQUIRED)
+#pkg_search_module(LCM REQUIRED lcm)
+find_package(LCM REQUIRED)
 
 if(LCM_NOT_FOUND)
   message(STATUS "LCM is not found. Inter-process communication depends on LCM.")
 endif(LCM_NOT_FOUND)
-set(LCM_LIBRARIES lcm)
 
 # Include files for LCM
 set(LCM_GENERATED_HEADER_PATH ${CMAKE_BINARY_DIR}/include)
