renamed map3d module to local

--- a/pc/planning/src/apps/CMakeLists.txt
+++ b/pc/planning/src/apps/CMakeLists.txt
@@ -23,7 +23,7 @@ add_executable(local_analysis local_analysis.cpp)
 target_link_libraries(local_analysis map vis nav_field ${OpenCV_LIBS})
 
 add_executable(octomap_server_node octomap_server_node.cpp)
-target_link_libraries(octomap_server_node map3d path_repair map geometry ${Octomap_LIBS} ${LCM_LIBRARIES})
+target_link_libraries(octomap_server_node local path_repair map geometry ${Octomap_LIBS} ${LCM_LIBRARIES})
 
 add_executable(shortcut_analysis shortcut_analysis.cpp)
 target_link_libraries(shortcut_analysis map vis nav_field ${OpenCV_LIBS})
