--- a/pc/planning/src/local/CMakeLists.txt
+++ b/pc/planning/src/local/CMakeLists.txt
@@ -9,19 +9,19 @@ find_package(PkgConfig REQUIRED)
 pkg_search_module(LCM REQUIRED lcm)
 
 # Add libraries
-set(MAP3D_LIB_SRC
+set(LOCAL_LIB_SRC
     octomap_server.cpp
     transformation.cpp
 )
-add_library(map3d STATIC ${MAP3D_LIB_SRC})
-target_link_libraries(map3d map geometry ${Octomap_LIBS} ${LCM_LIBRARIES})
+add_library(local STATIC ${LOCAL_LIB_SRC})
+target_link_libraries(local map geometry ${Octomap_LIBS} ${LCM_LIBRARIES})
 
 # Add executables
 add_executable(octree_example tests/octomap_example.cpp)
 target_link_libraries(octree_example ${Octomap_LIBS})
 
 #add_executable(test_octomap tests/test_octomap.cpp)
-#target_link_libraries(test_octomap map3d ${Octomap_LIBS})
+#target_link_libraries(test_octomap local ${Octomap_LIBS})
 
 #add_executable(test_cubebuilder tests/test_cubebuilder.cpp)
-#target_link_libraries(test_cubebuilder map geometry map3d ${Octomap_LIBS} ${LCM_LIBRARIES})
+#target_link_libraries(test_cubebuilder map geometry local ${Octomap_LIBS} ${LCM_LIBRARIES})
