--- a/pc/common/CMakeLists.txt
+++ b/pc/common/CMakeLists.txt
@@ -38,7 +38,7 @@ add_library(common STATIC ${SRCL_COMMON_LIB_SRC})
 if(ENABLE_LOGGING)
 add_definitions(-DENABLE_LOGGING)
 endif(ENABLE_LOGGING)
-#target_link_libraries(common quadflat ${LCM_LIBRARIES})
+target_link_libraries(common -lpthread)
 
 add_executable(test_logging tests/test_logging.cpp)
-target_link_libraries(test_logging common)
+target_link_libraries(test_logging common -lpthread)
