--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -25,14 +25,17 @@ include_directories(${CMAKE_SOURCE_DIR})
 include_directories(${CMAKE_SOURCE_DIR}/third_party/)
 include_directories(${CMAKE_SOURCE_DIR}/third_party/octomap-1.8.0/octomap/include)
 
+set(Octomap_LIBS octomap octomath)
+
 ## Add other sub source directories
+add_subdirectory(third_party)
 add_subdirectory(common)
 add_subdirectory(simulator)
 add_subdirectory(control)
 add_subdirectory(planning)
 add_subdirectory(quadrotor)
 add_subdirectory(utility)
-add_subdirectory(third_party)
+add_subdirectory(vis)
 
 ## Add test source directories
 if(BUILD_TESTS)
