most components compile now

--- a/src/planning/map/CMakeLists.txt
+++ b/src/planning/map/CMakeLists.txt
@@ -44,7 +44,7 @@ add_executable(octree_example tests/octomap_example.cpp)
 target_link_libraries(octree_example ${Octomap_LIBS})
 
 #add_executable(test_octomap tests/test_octomap.cpp)
-#target_link_libraries(test_octomap local ${Octomap_LIBS})
+#target_link_libraries(test_octomap ${Octomap_LIBS})
 
 #add_executable(test_cubebuilder tests/test_cubebuilder.cpp)
-#target_link_libraries(test_cubebuilder map geometry local ${Octomap_LIBS} ${LCM_LIBRARIES})
+#target_link_libraries(test_cubebuilder map geometry ${Octomap_LIBS} ${LCM_LIBRARIES})
