--- a/src/quadrotor/apps/CMakeLists.txt
+++ b/src/quadrotor/apps/CMakeLists.txt
@@ -8,7 +8,7 @@ find_package(OpenCV REQUIRED)
 
 # Add executables
 add_executable(quadsim_pr_planner quadsim_planner.cpp)
-target_link_libraries(quadsim_pr_planner map path_repair quad common ${OpenCV_LIBS} ${LCM_LIBRARIES})
+target_link_libraries(quadsim_pr_planner map path_repair mission common ${OpenCV_LIBS} ${LCM_LIBRARIES})
 
 add_executable(planar_search planar_search.cpp)
 target_link_libraries(planar_search geometry map vis ${OpenCV_LIBS})
@@ -23,7 +23,7 @@ add_executable(local_analysis local_analysis.cpp)
 target_link_libraries(local_analysis map vis path_repair ${OpenCV_LIBS})
 
 add_executable(octomap_server_node octomap_server_node.cpp)
-target_link_libraries(octomap_server_node local path_repair map geometry ${Octomap_LIBS} ${LCM_LIBRARIES})
+target_link_libraries(octomap_server_node path_repair map geometry ${Octomap_LIBS} ${LCM_LIBRARIES})
 
 add_executable(shortcut_analysis shortcut_analysis.cpp)
 target_link_libraries(shortcut_analysis map vis path_repair ${OpenCV_LIBS})
