--- a/src/quadrotor/mission/CMakeLists.txt
+++ b/src/quadrotor/mission/CMakeLists.txt
@@ -8,18 +8,18 @@ include_directories(${CMAKE_CURRENT_SOURCE_DIR})
 # Add libraries
 set(QUAD_LIB_SRC
     mission_tracker.cpp
-    #path_manager.cpp
+    path_manager.cpp
     #quad_polyopt.cpp
 )
-add_library(quad STATIC ${QUAD_LIB_SRC})
-target_link_libraries(quad map local polyopt ${OpenCV_LIBS} ${Octomap_LIBS} ${LCM_LIBRARIES})
+add_library(mission STATIC ${QUAD_LIB_SRC})
+target_link_libraries(mission map polyopt ${OpenCV_LIBS} ${Octomap_LIBS} ${LCM_LIBRARIES})
 
 # Add executables
 #add_executable(wp_manager tests/wp_manager.cpp)
-#target_link_libraries(wp_manager quad ${LCM_LIBRARIES})
+#target_link_libraries(wp_manager mission ${LCM_LIBRARIES})
 
 #add_executable(test_waypoints tests/test_wpmanager.cpp)
-#target_link_libraries(test_waypoints quad map geometry local polyopt ${Octomap_LIBS} ${LCM_LIBRARIES})
+#target_link_libraries(test_waypoints mission map geometry polyopt ${Octomap_LIBS} ${LCM_LIBRARIES})
 
 #add_executable(test_quadopt tests/test_quadopt.cpp)
 #target_link_libraries(test_quadopt polyopt ${GUROBI_LIBRARIES} ${LCM_LIBRARIES})
