--- a/src/quadrotor/CMakeLists.txt
+++ b/src/quadrotor/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 2.8.11)
-project(rav_quadrotor)
+project(librav_quadrotor)
 
 # cmake module path
 list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake/modules")
