--- a/src/simulator/CMakeLists.txt
+++ b/src/simulator/CMakeLists.txt
@@ -45,3 +45,4 @@ add_subdirectory(apps)
 add_subdirectory(vrep_sim)
 add_subdirectory(quad_hbird_sim)
 add_subdirectory(quad_solo_sim)
+add_subdirectory(rc_car_sim)
