--- a/src/quadrotor/driver/CMakeLists.txt
+++ b/src/quadrotor/driver/CMakeLists.txt
@@ -7,7 +7,7 @@ include_directories(${CMAKE_CURRENT_SOURCE_DIR})
 
 # Add libraries
 set(QUAD_DRIVER_SRC
-    quad_state_broadcaster.cpp
+    quad_data_broadcaster.cpp
 )
 add_library(quad_driver STATIC ${QUAD_DRIVER_SRC})
 target_link_libraries(quad_driver ${LCM_LIBRARIES})
