--- a/src/simulator/apps/CMakeLists.txt
+++ b/src/simulator/apps/CMakeLists.txt
@@ -8,6 +8,9 @@ target_link_libraries(quadsim_hbird_demo quadsim)
 add_executable(rc_car_sim_demo rc_car_sim_demo.cpp)
 target_link_libraries(rc_car_sim_demo rccarsim rccar_ctrl)
 
+add_executable(rc_car_sim_control rc_car_sim_control.cpp)
+target_link_libraries(rc_car_sim_control rccarsim rccar_ctrl)
+
 add_executable(quadsim_path_repair quadsim_path_repair.cpp)
 target_link_libraries(quadsim_path_repair quadsim path_repair)
 
