more modifications on map request

--- a/src/quadrotor/path_repair/CMakeLists.txt
+++ b/src/quadrotor/path_repair/CMakeLists.txt
@@ -9,6 +9,7 @@ find_package(OpenCV REQUIRED)
 # Add libraries
 set(PATH_REPAIR_SIM_SRC
     sim/sim_env_gen.cpp
+    sim/virtual_quadrotor.cpp
 )
 add_library(pr_sim STATIC ${PATH_REPAIR_SIM_SRC})
 #target_link_libraries(pr_sim map polyopt common vis ${OpenCV_LIBS} ${LCM_LIBRARIES})
