--- a/src/quadrotor/path_repair/CMakeLists.txt
+++ b/src/quadrotor/path_repair/CMakeLists.txt
@@ -7,22 +7,21 @@ include_directories(${CMAKE_CURRENT_SOURCE_DIR})
 find_package(OpenCV REQUIRED)
 
 # Add libraries
-set(PATH_REPAIR_SIM_SRC
-    sim/sim_env_gen.cpp
-    sim/virtual_quadrotor.cpp
-)
-add_library(pr_sim STATIC ${PATH_REPAIR_SIM_SRC})
-#target_link_libraries(pr_sim map polyopt common vis ${OpenCV_LIBS} ${LCM_LIBRARIES})
-
 set(PATH_REPAIR_LIB_SRC
     quad_path_repair.cpp
-    path_repair.cpp
+    sim_path_repair.cpp
     geo_mark_graph.cpp
     shortcut_eval.cpp
     sg_graph_planner.cpp
 )
 add_library(path_repair STATIC ${PATH_REPAIR_LIB_SRC})
-target_link_libraries(path_repair map polyopt common vis ${OpenCV_LIBS} ${LCM_LIBRARIES})
+target_link_libraries(path_repair map mission polyopt common vis ${OpenCV_LIBS} ${LCM_LIBRARIES})
+
+set(PATH_REPAIR_SIM_SRC
+    sim/virtual_quadrotor.cpp
+)
+add_library(pr_sim STATIC ${PATH_REPAIR_SIM_SRC})
+target_link_libraries(pr_sim path_repair ${LCM_LIBRARIES})
 
 # Add executables
 #add_executable(graph_combine_exp tests/graph_combine_exp.cpp)
