--- a/src/quadrotor/CMakeLists.txt
+++ b/src/quadrotor/CMakeLists.txt
@@ -58,7 +58,7 @@ target_link_libraries(quad_base common ${LCM_LIBRARIES})
 
 ## Add other sub source directories
 add_subdirectory(apps)
-#add_subdirectory(driver)
-#add_subdirectory(mission)
-#add_subdirectory(motion_server)
+add_subdirectory(driver)
+add_subdirectory(mission)
+add_subdirectory(motion_server)
 add_subdirectory(path_repair)
